- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    5.1.0
- 
    None
- 
    Windows 7 x64 English locale, Qt 5.0.2, Qt 5.1.0
- 
        eb5749e8d9e873ac5aec2ba042d7a04b894f1421
Switched from Qt5.0.2 to Qt5.1.0 and noticed that my application started opening incorrect URLs in a browser.
Here is an example code:
main.cpp
#include <QApplication> #include <QDesktopServices> #include <QUrl> int main(int argc, char *argv[]) { QApplication a(argc, argv); QDesktopServices::openUrl(QUrl(QString("http://test.org/?/profile/5"))); return EXIT_SUCCESS; }
When running it with Qt5.0.2, http://test.org/?/profile/5 opens, but when running with Qt5.1.0 http://test.org/?\profile\5 does.
It's somehow related to the '?' character - removing it fixes the slashes.
- is required for
- 
                    QTBUG-32183 Issues to be fixed in 5.1.1 (next patch release) -         
- Closed
 
-         
- relates to
- 
                    QTBUG-13359 QDesktopServices:openUrl() fails to open files on smb share -         
- Closed
 
-         
- 
                    QTBUG-31945 OSX: QDesktopServices fails to open some urls. -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-32311 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 60782,4 | Bugfix QDesktopServices on Windows | stable | qt/qtbase | Status: MERGED | +2 | 0 |