tests/auto/gui/util/qdesktopservices/tst_qdesktopservices.cpp
@@ -82,6 +82,7 @@ void tst_qdesktopservices::openUrl()
     QCOMPARE(QDesktopServices::openUrl(QUrl()), false);
 #if defined(Q_OS_WIN) && !defined(Q_OS_WINCE)
     // this test is only valid on windows on other systems it might mean open a new document in the application handling .file
+    QTest::ignoreMessage(QtWarningMsg, "ShellExecute 'file://invalid.file' failed (error 3).");
     QCOMPARE(QDesktopServices::openUrl(QUrl("file://invalid.file")), false);
 #endif
 }
